applications/base/fui-components/fui-components-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fui-components
  namespace: fui-components
spec:
  selector:
    app: fui-components
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
