applications/base/fui-components/fui-components-public-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fui-components-public
  namespace: fui-components
  labels:
    external-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: abbottland.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: istio-ingress-public
      namespace: istio-system
      sectionName: https-public
  hostnames:
    - "fui-components.abbottland.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fui-components
          port: 80
